==> ARMmbed/mbed-os/connectivity/drivers/emac/TARGET_APM_EMAC/apm32xx_emac.cpp <==
#include <stdlib.h>
#include "cmsis_os.h"
#include "mbed_interface.h"
#include "mbed_assert.h"
#include "events/mbed_shared_queues.h"
#include "netsocket/nsapi_types.h"
#include "apm32xx_emac.h"
#include "apm32f4xx_eth.h"
#define _ETH_FLAG_RX                       (1)
#define _THREAD_STACKSIZE                  (1024)
#define _THREAD_PRIORITY                   (osPriorityHigh)
#define _PHY_TASK_PERIOD                   (200ms)
#define _ETH_HW_ADDR_SIZE                  (6)
#define _ETH_MTU_SIZE                      (1500)
#define _ETH_IF_NAME                       "ap"
#define _ETH_BOARD_PHY_ADDRESS             (0x00)
#define _ETH_HARDWARE_CHECKSUM             (0)
#define _APM_MAC_ADDR0                     0x00
#define _APM_MAC_ADDR1                     0x08
#define _APM_MAC_ADDR2                     0x10
#define _APM32_ID_ADDR                     0x1FFF7A10

bool APM32_EMAC::low_level_init()
{
    /* Init ETH */
    uint8_t macaddr[6];
    uint32_t i;
    ETH_Config_T ETH_InitStructure;

#if (MBED_MAC_ADDRESS_SUM != MBED_MAC_ADDR_INTERFACE)
    MACAddr[0] = MBED_MAC_ADDR_0;
    MACAddr[1] = MBED_MAC_ADDR_1;
    MACAddr[2] = MBED_MAC_ADDR_2;
    MACAddr[3] = MBED_MAC_ADDR_3;
    MACAddr[4] = MBED_MAC_ADDR_4;
    MACAddr[5] = MBED_MAC_ADDR_5;
#else
    mbed_mac_address((char *)macaddr);
#endif

    ConfigEthernetGPIO();

    ConfigEthernetMACDMA();

    /* initialize MAC address in ethernet MAC */
    ETH_ConfigMACAddress(ETH_MAC_ADDRESS0, macaddr);
    ETH_EnableDMAInterrupt(ETH_DMA_INT_NIS | ETH_DMA_INT_RX);

    /* Initialize Tx Descriptors list: Chain Mode */
    ETH_ConfigDMATxDescChain(DMATxDscrTab, &Tx_Buff[0][0], ETH_TXBUFNB);
    /* Initialize Rx Descriptors list: Chain Mode  */
    ETH_ConfigDMARxDescChain(DMARxDscrTab, &Rx_Buff[0][0], ETH_RXBUFNB);

    /* Enable Ethernet Rx interrrupt */
    for(i = 0; i < ETH_RXBUFNB; i++)
    {
        ETH_EnableDMARxDescReceiveInterrupt(&DMARxDscrTab[i]);
    }

#if (_ETH_HARDWARE_CHECKSUM == 1)
    /* Enable the checksum insertion for the Tx frames */
    for(i = 0; i < ETH_TXBUFNB; i++)
    {
        ETH_ConfigDMATxDescChecksumInsertion(&DMATxDscrTab[i], ETH_DMATXDESC_CHECKSUMTCPUDPICMPFULL);
    }
#endif

    /* Enable MAC and DMA transmission and reception */
    ETH_Start();

    return true;
}

bool APM32_EMAC::link_out(emac_mem_buf_t *buf)
{
    emac_mem_buf_t *q;
    uint8_t *buffer;
    uint16_t framelength = 0;

    /* Get exclusive access */
    TXLockMutex.lock();

    /* copy frame from pbufs to driver buffers */
    buffer = reinterpret_cast<uint8_t *>(DMATxDescToSet->Buffer1Addr);

    for (q = buf; q != NULL; q = memory_manager->get_next(q))
    {
        memcpy(static_cast<uint8_t *>(&buffer[framelength]),\
               static_cast<uint8_t *>(memory_manager->get_ptr(q)), memory_manager->get_len(q));
        framelength = framelength + memory_manager->get_len(q);
    }

    /* Prepare transmit descriptors to give to DMA */
    ETH_TxPacket(framelength);

    memory_manager->free(buf);
    /* Restore access */
    TXLockMutex.unlock();

    return true;
}

emac_mem_buf_t *APM32_EMAC::low_level_input(void)
{
    emac_mem_buf_t *p = NULL, *q;
    unsigned short len;
    int l =0;
    ETH_Frame_T frame;
    u8 *buffer;

    frame = ETH_RxPacket();

    len = frame.length;

    buffer = (u8 *)frame.buffer;

    if (len > 0) 
    {
        /* Allocate a memory buffer chain from buffer pool */
        p = memory_manager->alloc_pool(len, 0);
    }
    else
    {
        return p;
    }

    if (p != NULL)
    {
        for (q = p; q != NULL; q = memory_manager->get_next(q))
        {
            memcpy(static_cast<uint8_t *>(memory_manager->get_ptr(q)),\
                   static_cast<uint8_t *>(&buffer[l]), memory_manager->get_len(q));
            l = l + memory_manager->get_len(q);
        }
    }
    frame.descriptor->Status = ETH_DMARXDESC_OWN;

      /** When Rx Buffer unavailable flag is set: clear it and resume reception */
    if ((ETH->DMASTS & BIT7) != (u32)RESET)
    {
        /** Clear RBUS ETHERNET DMA flag */
        ETH->DMASTS = BIT7;
        /** Resume DMA reception */
        ETH->DMARXPD = 0;
    }

    return p;
}

void APM32_EMAC::thread_function(void *pvParameters)
{
    static struct APM32_EMAC *eint = static_cast<APM32_EMAC *>(pvParameters);

    while (1)
    {
        uint32_t flags = osThreadFlagsWait(_ETH_FLAG_RX, osFlagsWaitAny, osWaitForever);

        if (flags & _ETH_FLAG_RX)
        {
            eint->packet_rx();
        }
    }
}

void APM32_EMAC::phy_task()
{
    uint16_t regval;

    regval = ETH_ReadPHYRegister(_ETH_BOARD_PHY_ADDRESS,PHY_BSR);
    if (emac_link_state_cb)
    {
        regval &= PHY_LINKED_STATUS;

        if (phy_status != regval)
        {
            if (regval == PHY_LINKED_STATUS)
            {
                emac_link_state_cb(true);;
            }
            else
            {
                emac_link_state_cb(false);
            }
        }
    }

    phy_status = regval;
}

void mbed_mac_address(char *mac)
{
    uint32_t unique_id;

    unique_id = *(uint32_t *)_APM32_ID_ADDR;
    mac[0] = _APM_MAC_ADDR0;
    mac[1] = _APM_MAC_ADDR1;
    mac[2] = _APM_MAC_ADDR2;
    mac[3] = (unique_id & 0x00ff0000) >> 16;
    mac[4] = (unique_id & 0x0000ff00) >> 8;
    mac[5] = (unique_id & 0x000000ff);
}

bool APM32_EMAC::power_up()
{
    /* Initialize the hardware */
    if (low_level_init() == false)
    {
        return false;
    }

    /* Worker thread */
    rx_thread = create_new_thread("apm32_emac_thread", &APM32_EMAC::thread_function, \
                                  this, _THREAD_STACKSIZE, _THREAD_PRIORITY, &rx_thread_cb);

    phy_task_handle = mbed::mbed_event_queue()->call_every(_PHY_TASK_PERIOD, mbed::callback(this, &APM32_EMAC::phy_task));

    /* Allow the PHY task to detect the initial link state and set up the proper flags */
    osDelay(10);

    enable_interrupts();

    return true;
}

uint32_t APM32_EMAC::get_mtu_size() const
{
    return _ETH_MTU_SIZE;
}

void APM32_EMAC::get_ifname(char *name, uint8_t size) const
{
    memcpy(name, _ETH_IF_NAME, (size < sizeof(_ETH_IF_NAME)) ? size : sizeof(_ETH_IF_NAME));
}

uint8_t APM32_EMAC::get_hwaddr_size() const
{
    return _ETH_HW_ADDR_SIZE;
}
